--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,11 +12,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-use": "^17.6.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
